--- a/control
+++ b/control
@@ -2,7 +2,7 @@ Source: astlib
 Section: python
 Priority: extra
 Maintainer: Gijs Molenaar <gijs@pythonic.nl>
-Build-Depends: debhelper (>= 8.0.0), python2.7-dev
+Build-Depends: debhelper (>= 8.0.0), python2.7-dev, python-pkg-resources
 Standards-Version: 3.9.2
 Homepage: http://astlib.sourceforge.net/
 
